# junk

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Junk.files  README.md  Theme.theme  box2d.nix  default.nix  flake.nix  fx.frag  fx.vert  generateMap.py  junk.files  make.sh  manifest.scm  map.json  sfgui.nix
cmake/Modules/: FindSFGUI.cmake
resources/: Theme.theme  map.json
scripts/: build  check  check-one  generate-map  list-files
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Client.cpp  Client.hpp
src/client/config/: CMakeLists.txt  ClientConfig.cpp  ClientConfig.hpp
src/client/controller/: CMakeLists.txt  ClientController.cpp  ClientController.hpp
src/client/gui/: AddressFetch.cpp  AddressFetch.hpp  CMakeLists.txt  HUD.cpp  HUD.hpp  SimpleMenu.cpp  SimpleMenu.hpp
src/client/menu/: CMakeLists.txt  ScreenManager.cpp  ScreenManager.hpp  SimpleMenu.hpp
src/client/model/: CMakeLists.txt  ClientModel.cpp  ClientModel.cpp.autosave  ClientModel.hpp  ServerServiceDefinition.thrift  ServerServiceHandler.cpp  ServerServiceHandler.hpp
src/client/model/game_object/: CMakeLists.txt  GameObject.cpp  GameObject.hpp  GameObjectFactory.cpp  GameObjectFactory.cpp.autosave  GameObjectFactory.hpp
src/client/model/game_object/bonus/: Bonus.cpp  Bonus.hpp
src/client/model/game_object/unit/: CMakeLists.txt  Unit.cpp  Unit.hpp
src/client/model/game_object/unit/bonus/: Bonus.cpp  Bonus.hpp  CMakeLists.txt
src/client/model/game_object/unit/bullet/: Bullet.cpp  Bullet.hpp  CMakeLists.txt
src/client/model/game_object/unit/player/: CMakeLists.txt  Player.cpp  Player.hpp
src/client/model/game_object/unit/wall/: CMakeLists.txt  Wall.cpp  Wall.hpp
src/client/model/game_object/wall/: Wall.cpp  Wall.hpp
src/client/model/gen-cpp/: ServerService.cpp  ServerService.h  ServerServiceDefinition_constants.cpp  ServerServiceDefinition_constants.h  ServerServiceDefinition_types.cpp  ServerServiceDefinition_types.h  ServerService_server.skeleton.cpp
src/client/model/network_model/: CMakeLists.txt  ClientNetworkModel.cpp  ClientNetworkModel.hpp
src/client/view/: CMakeLists.txt  ClientView.cpp  ClientView.cpp.autosave  ClientView.hpp  Unit.cpp  Unit.hpp
src/client/view/game_object/: CMakeLists.txt  GameObject.cpp  GameObject.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp
src/client/view/game_object/bonus/: Bonus.cpp  Bonus.cpp~  Bonus.hpp
src/client/view/game_object/unit/: CMakeLists.txt  Unit.cpp  Unit.hpp
src/client/view/game_object/unit/bonus/: Bonus.cpp  Bonus.hpp  CMakeLists.txt
src/client/view/game_object/unit/bullet/: Bullet.cpp  Bullet.hpp  CMakeLists.txt
src/client/view/game_object/unit/player/: CMakeLists.txt  Player.cpp  Player.hpp
src/client/view/game_object/unit/wall/: CMakeLists.txt  Wall.cpp  Wall.hpp
src/client/view/game_object/wall/: Wall.cpp  Wall.hpp
src/client/view/unit/: Unit.hpp
src/cmd/: CMakeLists.txt  client.cpp  server.cpp
src/common/: CMakeLists.txt
src/common/client_service/: CMakeLists.txt  ClientServiceDefinition.thrift  ClientServiceHandler.cpp  ClientServiceHandler.hpp
src/common/game_object/: CMakeLists.txt  GameObject.cpp  GameObject.hpp  GameObject.hpp~
src/common/game_object/bonus/: Bonus.hpp
src/common/game_object/unit/: CMakeLists.txt  Unit.cpp  Unit.hpp
src/common/game_object/unit/bonus/: Bonus.cpp  Bonus.hpp  CMakeLists.txt
src/common/game_object/unit/bullet/: Bullet.cpp  Bullet.hpp  CMakeLists.txt
src/common/game_object/unit/player/: CMakeLists.txt  Player.cpp  Player.hpp
src/common/game_object/unit/wall/: CMakeLists.txt  Wall.cpp  Wall.hpp
src/common/game_object/wall/: Wall.hpp
src/common/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  Logger.inl  Settings.cpp  Settings.hpp
src/common/observer/: Observable.cpp  Observable.hpp
src/common/server_service/: CMakeLists.txt  ServerServiceHandler.hpp
src/common/service/: .Patches.thrift.swp  Actions.thrift  CMakeLists.txt  Patches.thrift  ServiceDefinition.thrift  Shared.thrift
src/common/service/client/: ClientServiceHandler.cpp  ClientServiceHandler.hpp
src/common/service/gen-cpp/: ClientService.cpp  ClientService.h  ClientService_server.skeleton.cpp  ServerService.cpp  ServerService.h  ServerService_server.skeleton.cpp  ServiceDefinition_constants.cpp  ServiceDefinition_constants.h  ServiceDefinition_types.cpp  ServiceDefinition_types.h
src/common/service/server/: ServerServiceHandler.cpp  ServerServiceHandler.hpp
src/common/utils/: CMakeLists.txt  Convert.cpp  Convert.hpp  Resource.cpp  Resource.hpp
src/logger/: .gitignore  Logger.hpp
src/server/: CMakeLists.txt  Server.cpp  Server.hpp
src/server/model/: CMakeLists.txt  ClientServiceHandler.cpp  ClientServiceHandler.hpp  ServerModel.cpp  ServerModel.hpp
src/server/model/game_model/: CMakeLists.txt  CollisionHandler.cpp  CollisionHandler.hpp  ServerGameModel.cpp  ServerGameModel.cpp~  ServerGameModel.hpp  ServerGameModel.hpp~  Unit.cpp  Unit.hpp
src/server/model/game_model/game_object/: CMakeLists.txt  GameObject.cpp  GameObject.cpp~  GameObject.hpp  GameObject.hpp~
src/server/model/game_model/game_object/bonus/: Bonus.cpp  Bonus.cpp~  Bonus.hpp  Bonus.hpp~
src/server/model/game_model/game_object/unit/: CMakeLists.txt  Unit.cpp  Unit.cpp.autosave  Unit.cpp~  Unit.hpp
src/server/model/game_model/game_object/unit/bonus/: Bonus.cpp  Bonus.hpp  CMakeLists.txt
src/server/model/game_model/game_object/unit/bullet/: Bullet.cpp  Bullet.cpp~  Bullet.hpp  Bullet.hpp~  CMakeLists.txt
src/server/model/game_model/game_object/wall/: CMakeLists.txt  Wall.cpp  Wall.hpp
src/server/model/gen-cpp/: ClientService.cpp  ClientService.h  ClientServiceDefinition_constants.cpp  ClientServiceDefinition_constants.h  ClientServiceDefinition_types.cpp  ClientServiceDefinition_types.h  ClientService_server.skeleton.cpp
src/server/model/network_model/: CMakeLists.txt  ServerNetworkModel.cpp  ServerNetworkModel.hpp
src/test/: CMakeLists.txt  client.cpp  gui.cpp  log.cpp  server.cpp  unit.cpp  view.cpp
src/unit/: Unit.cpp  Unit.hpp
src/view/: View.cpp  View.hpp
(+8 files in other folders)
